
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int
is_primitive_type(int type)
{
    switch(type) {
    case 137:
    case 142:
    case 134:
    case 143:
    case 141:
    case 139:
    case 140:
    case 132:
    case 135:
    case 131:
    case 130:
    case 133:
    case 138:
    case 144:
    case 129:
    case 128:
    case 136:
 return 1;
    default:
 return 0;
    }
}
